--- a/flask_app/templates/tailwindcss/components.html
+++ b/flask_app/templates/tailwindcss/components.html
@@ -1,8 +1,8 @@
 <style type="text/tailwindcss">
-    @layer utilities {
+    @layer components {
         /* buttons */
         button, .btn {
-            @apply px-3 shadow rounded text-center duration-300;
+            @apply px-3 shadow rounded text-center duration-300 cursor-pointer
         }
         button:hover, .btn:hover {
             @apply opacity-80
@@ -18,6 +18,9 @@
         }
         .btn-success {
             @apply bg-green-400
+        }
+        .btn-disabled {
+            @apply text-gray-300 
         }
 
         /* forms */
