--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -6,9 +6,9 @@
 
     <div class="flex justify-center items-center h-full">
         {% set form_box_style = 'border h-full mx-3 p-3 rounded' %}
-        <div class="{{ form_box_style }}">
+        <!-- <div class="{{ form_box_style }}">
             {% include '/forms/users/create_form.html' %}
-        </div>
+        </div> -->
         <div class="{{ form_box_style }}">
             {% include '/forms/users/login_form.html' %}
         </div>
