--- a/flask_app/templates/utils/sidenav.html
+++ b/flask_app/templates/utils/sidenav.html
@@ -12,7 +12,7 @@
     </div>
     <div class="mt-auto mb-10 flex justify-center items-center">
         <ul>
-            <li><a class="flex gap-3 btn btn-danger" href="/user/logout"><i class="text-xl fa-solid fa-right-from-bracket"></i>Logout</a></li>
+            <li><a class="flex gap-3 btn btn-danger" href="/users/logout"><i class="text-xl fa-solid fa-right-from-bracket"></i>Logout</a></li>
         </ul>
     </div>
 </div>
