--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -2,13 +2,11 @@
 
 {% block base_content %}
 <div class="flex flex-col justify-center items-center h-full">
-    <h1 class="text-6xl my-3">Shadow Forge landing Page</h1>
+        <h1 class="text-6xl my-3">Echo Vault</h1>
+        <img class="w-1/2 caret-transparent" src="{{ url_for('static', filename='img/EchoVault.png') }}" alt="Echo Vault">
 
     <div class="flex justify-center items-center h-full">
         {% set form_box_style = 'border h-full mx-3 p-3 rounded' %}
-        <!-- <div class="{{ form_box_style }}">
-            {% include '/forms/users/create_form.html' %}
-        </div> -->
         <div class="{{ form_box_style }}">
             {% include '/forms/users/login_form.html' %}
         </div>
