--- a/flask_app/templates/tailwindcss/components.html
+++ b/flask_app/templates/tailwindcss/components.html
@@ -27,6 +27,9 @@
         input, .input {
             @apply text-center rounded border shadow;
         }
+        .no-input {
+            @apply p-0 rounded-none border-none shadow-none
+        }
         .form-section {
             @apply flex flex-col text-center justify-center items-center mb-3
         }
